# MicroTools

./: .gitignore  CMakeLists.txt  README.md
00-MicroControllers/: CMakeLists.txt
00-MicroControllers/00-Pico/: CMakeLists.txt
00-MicroControllers/00-Pico/00-Precompiler/: CMakeLists.txt
00-MicroControllers/00-Pico/00-Precompiler/microcontroller/: pico.h
00-MicroTools/: CMakeLists.txt
00-MicroTools/00-Pico/: CMakeLists.txt
00-MicroTools/00-Pico/00-I2C/: CMakeLists.txt  i2c.c
00-MicroTools/00-Pico/00-I2C/include/simplePico/: i2c.h
00-MicroTools/00-Pico/01-I2C/: CMakeLists.txt  i2c.c
00-MicroTools/00-Pico/01-I2C/include/simplePico/: i2c.h
01-GenericFunc/00-I2C/: CMakeLists.txt  i2c.c
01-GenericFunc/00-I2C/include/microless/: .i2c.h.swp  i2c.h
01-Modules/00-GPS/00-ZEDF9P/: CMakeLists.txt  zedf9p.c
01-Modules/00-GPS/00-ZEDF9P/include/gps/: zedf9p.h
02-Examples/CMakeLibraryTemplate/: CMakeLists.txt
02-Examples/Display/ST7565/Snoopy/: CMakeLists.txt  snoopy.c  snoopy.cpp
02-Modules/: CMakeLists.txt
02-Modules/00-GPS/: CMakeLists.txt
02-Modules/00-GPS/00-ZEDF9P/: .zedf9p.c.swp  zedf9p.c
02-Modules/00-GPS/00-ZEDF9P/include/gps/: msgs_ubx.h  ubx_msg_classes.h  zedf9p.h
02-Modules/Display/ST7565/: CMakeLists.txt  ST7565.cpp  ST7565.h  ST7565.hpp
02-Modules/Memory/: CMakeLists.txt
03-Examples/: CMakeLists.txt
Display/: CMakeLists.txt
Display/ST7565/: CMakeLists.txt  ST7565.c  ST7565.h
cmake/: Gather_All_Libs.cmake
examples/: CMakeLists.txt
examples/Display/ST7565/: CMakeLists.txt  snoopy.c
examples/Display/ST7565/Snoopy/: CMakeLists.txt
src/: CMakeLists.txt
src/Display/ST7565/: CMakeLists.txt  ST7565.c
src/Temp/: CMakeLists.txt  tst.c  tst.h
