message(" ** Checking if Raspberry Pi pico Libs should be incorporated")
if(USE_PICO_LIBS)
  if(PICO_SDK_INITIALIZED)
    message(" ** Pico SDK properly initialized adding pico tools")
    add_subdirectory(00-Pico)
  else()
    message(FATAL_ERROR "Raspberry Pico SDK has not been initalized, but CMake has been configured such that user wants to use this board. Make sure SDK has been initialized and CMake variable \"PICO_SDK_INITIALIZED\" had been defined/set to ON")
  endif()
else()
  message(" ** Variable \"USE_PICO_LIBS\" has not been set, and no libaries for the raspberry pi pico are being encorporated in your build system.")
endif()
