if(NOT TARGET desousa_micro_tools_pico_i2c)
  message(" ** adding MicroTools rPiPico I2C library")
  add_library(desousa_micro_tools_pico_i2c INTERFACE)
  target_include_directories(desousa_micro_tools_pico_i2c INTERFACE {CMAKE_CURRENT_LIST_DIR}/include)
  message("current include directory == ${CMAKE_CURRENT_LIST_DIR}/include")
  target_sources(desousa_micro_tools_pico_i2c INTERFACE ${CMAKE_CURRENT_LIST_DIR}/i2c.c)
  target_link_libraries(desousa_micro_tools_pico_i2c INTERFACE hardware_i2c hardware_gpio pico_stdlib)
endif()
